<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/amazingbackground"
    tools:context="${relativePackage}.${activityClass}" >

      <ScrollView
          android:id="@+id/scrollView1"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:layout_centerInParent="true"
                android:fillViewport="true"
                android:layout_marginTop="10dp"
          >
          
    <LinearLayout
        android:id="@+id/start_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
        android:orientation="vertical" 
        android:visibility="gone"
        >

        <Button
            android:id="@+id/start_activities"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="startActivities"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="2dp"
            android:text="@string/start_act" />

        <Button
            android:id="@+id/tabs_menue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="tabsMenue"
            android:layout_margin="2dp"

            android:text="@string/tab_men" />

        <Button
            android:id="@+id/most_used"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="2dp"
            android:textStyle="bold"

            android:onClick="mostUsed"
            android:text="@string/most_used" />

        <Button
            android:id="@+id/webfiles"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:onClick="webFiles"

            android:text="@string/web_file" />
        
        <Button
            android:id="@+id/listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="listView"
            android:layout_margin="2dp"

            android:text="@string/list_view" />

        <Button
            android:id="@+id/imagedownload"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="imageDownload"
            android:layout_margin="2dp"
            
            android:text="@string/image_down" />

        <Button
            android:id="@+id/notifications"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="notifications"
            android:layout_margin="2dp"
            
            android:text="@string/notifications" />

        <Button
            android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="map"
            android:layout_margin="2dp"
            android:text="@string/map" />
         
         
          <Button
            android:id="@+id/animations"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="animations"
            android:layout_margin="2dp"
            android:text="@string/anim" />
        <Button
            android:id="@+id/about_us"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="aboutUs"
            android:layout_margin="2dp"
            android:text="@string/about_us" />

        </LinearLayout>
      </ScrollView>
      
        <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:weightSum="2"
        >
    <ImageView
        android:id="@+id/door_left"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:src="@drawable/doorleft" />

    <ImageView
        android:id="@+id/door_right"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        
         android:scaleType="fitXY"
        android:src="@drawable/doorright" />

    </LinearLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="start"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:alpha=".8"
        android:padding="10dp"
        android:text="@string/start" />
       
</RelativeLayout>
