<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/amazingbackground"
    tools:context="${relativePackage}.${activityClass}" >

      <ScrollView
          android:id="@+id/scrollView1"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_centerInParent="true"
          
          >
          
    <LinearLayout
        android:id="@+id/start_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            
        android:orientation="vertical" 
      >

        <Button
            android:id="@+id/left_right"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="leftRight"
            android:textStyle="bold"
             android:textColor="@color/white"
             android:layout_margin="2dp"
            android:text="@string/left_right" />

        <Button
            android:id="@+id/top_down"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="topDown"
          android:layout_margin="2dp"
            android:text="@string/top_down" />

        <Button
            android:id="@+id/diagonal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="diagonal"
            android:layout_margin="2dp"
            android:text="@string/diagonal" />
        
        <Button
            android:id="@+id/custom_anim"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="customAnim"
            android:layout_margin="2dp"
            android:text="@string/customanim" />

        <Button
            android:id="@+id/no_animation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="noAnimation"
            android:layout_margin="2dp"
            android:text="@string/noanimation" />
        
       

        </LinearLayout>
      </ScrollView>
   
       
</RelativeLayout>
