<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/amazingbackground"
    tools:context="${relativePackage}.${activityClass}" >
     
    <fragment
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/map"
        android:layout_alignParentBottom="true"
         >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/anim_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="moveCamera"
                 android:layout_margin="5dp"
        android:textColor="@color/white"
        android:textStyle="bold"
                android:text="@string/anim_camera" />
            
            <Button
                android:id="@+id/draw_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="drawLine"
                 android:layout_margin="5dp"
        android:textColor="@color/white"
        android:textStyle="bold"
                android:text="@string/draw_line" />
            
            <Button
                android:id="@+id/custom_marker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="customMarker"
                 android:layout_margin="5dp"
        android:textColor="@color/white"
        android:textStyle="bold"
                android:text="@string/custom_marker" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
